--- a/Assets/UI Toolkit/MainMenuStyle.uss
+++ b/Assets/UI Toolkit/MainMenuStyle.uss
@@ -60,3 +60,21 @@
     border-bottom-right-radius: 30px;
     border-bottom-left-radius: 30px;
 }
+
+.score {
+    -unity-font-style: bold;
+    align-self: center;
+    background-color: rgb(255, 0, 0);
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    padding-top: 4px;
+    padding-right: 8px;
+    padding-bottom: 4px;
+    padding-left: 8px;
+    color: rgb(255, 255, 255);
+    opacity: 1;
+    flex-direction: column;
+    font-size: 45px;
+}
